[gd_scene load_steps=5 format=2]

[ext_resource path="res://main.gd" type="Script" id=1]
[ext_resource path="res://viewport.gd" type="Script" id=2]
[ext_resource path="res://transparent.png" type="Texture" id=3]

[sub_resource type="ButtonGroup" id=1]

[node name="Main" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="Layout" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_lock_": true
}

[node name="Buttons" type="HBoxContainer" parent="Layout"]
margin_right = 1024.0
margin_bottom = 20.0

[node name="File" type="MenuButton" parent="Layout/Buttons"]
margin_right = 35.0
margin_bottom = 20.0
text = "File"
items = [ "Open File", null, 0, false, false, 0, 0, null, "", false, "Close File", null, 0, false, false, 1, 0, null, "", false ]
switch_on_hover = true

[node name="Sprite" type="MenuButton" parent="Layout/Buttons"]
margin_left = 39.0
margin_right = 88.0
margin_bottom = 20.0
text = "Sprite"
items = [ "Cut by Grid", null, 0, false, false, 0, 0, null, "", false, "Detect Sprites", null, 0, false, false, 1, 0, null, "", false ]
switch_on_hover = true

[node name="Export" type="MenuButton" parent="Layout/Buttons"]
margin_left = 92.0
margin_right = 144.0
margin_bottom = 20.0
text = "Export"
items = [ "Export as Individual Images", null, 0, false, false, 0, 0, null, "", false ]
switch_on_hover = true

[node name="Help" type="MenuButton" parent="Layout/Buttons"]
margin_left = 148.0
margin_right = 190.0
margin_bottom = 20.0
text = "Help"
items = [ "Help", null, 0, false, false, 0, 0, null, "", false, "Credits", null, 0, false, false, 1, 0, null, "", false ]
switch_on_hover = true

[node name="Main" type="HBoxContainer" parent="Layout"]
margin_top = 24.0
margin_right = 1024.0
margin_bottom = 564.0
size_flags_vertical = 3

[node name="VC" type="ViewportContainer" parent="Layout/Main"]
margin_right = 921.0
margin_bottom = 540.0
size_flags_horizontal = 3
size_flags_vertical = 3
stretch = true

[node name="Viewport" type="Viewport" parent="Layout/Main/VC"]
size = Vector2( 921, 540 )
handle_input_locally = false
usage = 0
render_target_update_mode = 3
script = ExtResource( 2 )

[node name="Background" type="TextureRect" parent="Layout/Main/VC/Viewport"]
visible = false
margin_right = 40.0
margin_bottom = 40.0
texture = ExtResource( 3 )
stretch_mode = 2

[node name="Image" type="TextureRect" parent="Layout/Main/VC/Viewport"]
mouse_filter = 0

[node name="Camera2D" type="Camera2D" parent="Layout/Main/VC/Viewport"]
current = true

[node name="Sidebar" type="VBoxContainer" parent="Layout/Main"]
margin_left = 925.0
margin_right = 1024.0
margin_bottom = 540.0

[node name="EditSprites" type="Button" parent="Layout/Main/Sidebar"]
margin_right = 99.0
margin_bottom = 20.0
toggle_mode = true
pressed = true
group = SubResource( 1 )
text = "Edit Sprites"

[node name="SelectSprites" type="Button" parent="Layout/Main/Sidebar"]
margin_top = 24.0
margin_right = 99.0
margin_bottom = 44.0
toggle_mode = true
group = SubResource( 1 )
text = "Select Sprites"

[node name="Bottom" type="HBoxContainer" parent="Layout"]
margin_top = 568.0
margin_right = 1024.0
margin_bottom = 582.0

[node name="Zoom" type="Label" parent="Layout/Bottom"]
margin_right = 40.0
margin_bottom = 14.0
text = "100% "

[node name="ProgressBar" type="ProgressBar" parent="Layout"]
margin_top = 586.0
margin_right = 1024.0
margin_bottom = 600.0

[node name="FileDialog" type="FileDialog" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -200.0
margin_top = -150.0
margin_right = 200.0
margin_bottom = 150.0
window_title = "Open a File"
resizable = true
mode = 0
access = 2
filters = PoolStringArray( "*.png" )

[node name="Note" type="ConfirmationDialog" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -150.0
margin_top = -100.0
margin_right = 150.0
margin_bottom = 100.0
rect_min_size = Vector2( 300, 200 )
dialog_autowrap = true

[node name="Help" type="PopupPanel" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -200.0
margin_top = -150.0
margin_right = 200.0
margin_bottom = 150.0
rect_min_size = Vector2( 400, 300 )

[node name="Label" type="Label" parent="Help"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 4.0
margin_right = -4.0
margin_bottom = -4.0
text = "Left click and drag to make a new sprite
Delete or backspace to delete selected sprites
Space or middle mouse to move around
Shift click to select multiple sprites at once"
align = 1
valign = 1
autowrap = true

[node name="Credits" type="PopupPanel" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -200.0
margin_top = -50.0
margin_right = 200.0
margin_bottom = 50.0
rect_min_size = Vector2( 400, 100 )

[node name="Label" type="RichTextLabel" parent="Credits"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 4.0
margin_right = -4.0
margin_bottom = -4.0
bbcode_enabled = true
bbcode_text = "[center]Credits
Exuin (Emily2)
Wasted
KamiGrave
Based on code from [url=https://github.com/ForkandBeard/Alferd-Spritesheet-Unpacker]Alferd Spritesheet Unpacker[/url][/center]"
text = "Credits
Exuin (Emily2)
Wasted
KamiGrave
Based on code from Alferd Spritesheet Unpacker"

[node name="Cut" type="PopupPanel" parent="."]
visible = true
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -200.0
margin_top = -150.0
margin_right = 200.0
margin_bottom = 150.0
rect_min_size = Vector2( 400, 300 )

[node name="VBox" type="VBoxContainer" parent="Cut"]
anchor_right = 1.0
anchor_bottom = 1.0
alignment = 1

[node name="Top" type="HBoxContainer" parent="Cut/VBox"]
margin_top = 112.0
margin_right = 400.0
margin_bottom = 136.0
alignment = 1

[node name="Label" type="Label" parent="Cut/VBox/Top"]
margin_left = 75.0
margin_top = 5.0
margin_right = 108.0
margin_bottom = 19.0
text = "Rows"

[node name="Rows" type="SpinBox" parent="Cut/VBox/Top"]
margin_left = 112.0
margin_right = 186.0
margin_bottom = 24.0
min_value = 1.0
value = 1.0

[node name="Label2" type="Label" parent="Cut/VBox/Top"]
margin_left = 190.0
margin_top = 5.0
margin_right = 246.0
margin_bottom = 19.0
text = "Columns"

[node name="Columns" type="SpinBox" parent="Cut/VBox/Top"]
margin_left = 250.0
margin_right = 324.0
margin_bottom = 24.0
min_value = 1.0
value = 1.0

[node name="Bottom" type="HBoxContainer" parent="Cut/VBox"]
margin_top = 140.0
margin_right = 400.0
margin_bottom = 164.0
alignment = 1

[node name="Label" type="Label" parent="Cut/VBox/Bottom"]
margin_left = 81.0
margin_top = 5.0
margin_right = 119.0
margin_bottom = 19.0
text = "Y-size"

[node name="YSize" type="SpinBox" parent="Cut/VBox/Bottom"]
margin_left = 123.0
margin_right = 197.0
margin_bottom = 24.0
min_value = 1.0
value = 1.0

[node name="Label2" type="Label" parent="Cut/VBox/Bottom"]
margin_left = 201.0
margin_top = 5.0
margin_right = 240.0
margin_bottom = 19.0
text = "X-size"

[node name="XSize" type="SpinBox" parent="Cut/VBox/Bottom"]
margin_left = 244.0
margin_right = 318.0
margin_bottom = 24.0
min_value = 1.0
value = 1.0

[node name="CutOk" type="Button" parent="Cut/VBox"]
margin_left = 185.0
margin_top = 168.0
margin_right = 215.0
margin_bottom = 188.0
size_flags_horizontal = 4
text = "Ok"

[connection signal="gui_input" from="Layout/Main/VC" to="." method="outside_sprite_gui_input"]
[connection signal="gui_input" from="Layout/Main/VC/Viewport/Image" to="." method="outside_sprite_gui_input"]
[connection signal="resized" from="Layout/Main/VC/Viewport/Image" to="." method="_on_TextureRect_resized"]
[connection signal="dir_selected" from="FileDialog" to="." method="_on_FileDialog_dir_selected"]
[connection signal="file_selected" from="FileDialog" to="." method="_on_FileDialog_file_selected"]
[connection signal="meta_clicked" from="Credits/Label" to="." method="_on_Label_meta_clicked"]
[connection signal="pressed" from="Cut/VBox/CutOk" to="." method="_on_CutOk_pressed"]
